Reset input selected background color

--- a/src/style/reset.scss
+++ b/src/style/reset.scss
@@ -125,3 +125,7 @@ input:-webkit-autofill {
   background: #171718 !important;
   color: #fff;
 }
+input:-internal-autofill-selected{
+  background: #171718 !important;
+  color: #fff;
+}
