Third trial and error

--- a/src/style/reset.scss
+++ b/src/style/reset.scss
@@ -129,3 +129,10 @@ input:-internal-autofill-selected{
   background: #171718 !important;
   color: #fff;
 }
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+  -webkit-transition-delay: 99999s;
+  -webkit-transition: color 99999s ease-out, background-color 99999s ease-out;
+}
