--- a/src/style/reset.scss
+++ b/src/style/reset.scss
@@ -83,7 +83,6 @@ video {
   padding: 0;
   border: 0;
   box-sizing: border-box;
-  vertical-align: baseline;
 }
 ol,
 ul {
@@ -96,6 +95,15 @@ body {
   color: #ffffff;
   font-size: 18px;
   letter-spacing: 0.2px;
+}
+@media screen and (max-width: 980px) {
+  html,body {
+    width: 100%;
+    height: 100%;
+    color: #ffffff;
+    font-size: 12px;
+    letter-spacing: 0.2px;
+  }
 }
 // 重置滚动条样式
 ::-webkit-scrollbar {
