Connect wallet and buy blind box

--- a/src/style/global.scss
+++ b/src/style/global.scss
@@ -1,3 +1,9 @@
+.disable_bnb{
+  color: #fff!important;
+  background: #ccc !important;
+  cursor: not-allowed !important;
+  border-radius: 25px;
+}
 .display_flex {
   display: flex;
 }
