--- a/src/style/self.scss
+++ b/src/style/self.scss
@@ -1,1 +1,2 @@
-$bg_url:'//cdn.hashland.com/sacredTestImg/';
+$bg_url:'//cdn.hashland.com/sacredlab_assets_test/images/';
+$font_url:'//cdn.hashland.com/sacredlab_assets_test/fonts/';
