--- a/src/style/reset.scss
+++ b/src/style/reset.scss
@@ -136,3 +136,7 @@ input:-webkit-autofill:active {
   -webkit-transition-delay: 99999s;
   -webkit-transition: color 99999s ease-out, background-color 99999s ease-out;
 }
+a{
+  text-decoration: none;
+  color: #ffffff;
+}
