--- a/src/style/global.scss
+++ b/src/style/global.scss
@@ -1,39 +1,38 @@
-
-.color1{
-  color: #9D9C9C !important;
+.color1 {
+  color: #9d9c9c !important;
 }
-.color2{
-  color: #9F9579 !important;
+.color2 {
+  color: #9f9579 !important;
 }
-.color2_opacity{
+.color2_opacity {
   color: rgba(159, 149, 121, 0.77);
 }
-.color3{
-  color:#BB9F5A !important;
+.color3 {
+  color: #bb9f5a !important;
 }
-.color3_opacity{
+.color3_opacity {
   color: rgba(187, 159, 90, 0.64);
 }
-.color4{
-  color: #F5E2A7 !important;
+.color4 {
+  color: #f5e2a7 !important;
 }
-.color4_opacity{
+.color4_opacity {
   color: rgba(245, 226, 167, 0.67);
 }
-.bg1{
-  background: #9F9579 !important;
+.bg1 {
+  background: #9f9579 !important;
 }
-.bg2{
-  background: #BB9F5A !important;
+.bg2 {
+  background: #bb9f5a !important;
 }
-.bg3{
-  background: #F5E2A7 !important;
+.bg3 {
+  background: #f5e2a7 !important;
 }
-.bg4{
-  background: #9D9C9C !important;
+.bg4 {
+  background: #9d9c9c !important;
 }
-.disable_bnb{
-  color: #fff!important;
+.disable_bnb {
+  color: #fff !important;
   background: #ccc !important;
   cursor: not-allowed !important;
   border-radius: 25px;
@@ -44,29 +43,43 @@
 .margin_right0 {
   margin-right: 0 !important;
 }
-.margin0{
+.margin0 {
   margin: 0 !important;
 }
-.color_fff{
+.color_fff {
   color: #fff !important;
 }
-.color_000{
+.color_000 {
   color: #000 !important;
 }
-img{
+img {
   object-fit: contain;
 }
-.disply_none{
+.disply_none {
   display: none !important;
 }
-.input_prompt {
-  width: 100%;
-  min-height: 20px;
-  color: #fb3e3e;
-  margin-top: 10px;
+.eye {
+  width: 50px;
+  height: 100%;
+  div {
+    cursor: pointer;
+    width: 30px;
+    height: 100%;
+    margin: 0 auto;
+    background-image: url($bg_url + "eye1.webp");
+    background-size: 100%;
+    background-repeat: no-repeat;
+    background-position: center;
+    &.active {
+      background-image: url($bg_url + "eye2.webp");
+      background-size: 100%;
+      background-repeat: no-repeat;
+      background-position: center;
+    }
+  }
 }
 // 左右来回上下抖动 (input校验)
-.ani_shake{
+.ani_shake {
   // animation-name: shock;
   // animation-duration: .1s; //规定完成动画所花费的时间，以秒或毫秒计
   // animation-timing-function: linear; //规定动画的速度曲线。
@@ -84,11 +97,11 @@ img{
   100% {
     margin-left: 5px;
     margin-right: 0px;
-    margin-top: 5px	;
+    margin-top: 5px;
   }
 }
 // 左右来回抖动  (没有同意协议抖动)
-.animation_move{
+.animation_move {
   animation: move 0.1s linear 0s 3 normal;
 }
 @keyframes move {
@@ -101,8 +114,8 @@ img{
     margin-right: 0px;
   }
 }
-.demo_font_color{
-  background: linear-gradient(180deg, #F7E9B9 0%, #F0CE75 100%);
+.demo_font_color {
+  background: linear-gradient(180deg, #f7e9b9 0%, #f0ce75 100%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
@@ -187,7 +200,7 @@ img{
     font-size: 0.34rem;
   }
   .mobile_font30 {
-    font-size: 0.30rem;
+    font-size: 0.3rem;
   }
   .mobile_font28 {
     font-size: 0.28rem;
@@ -199,7 +212,7 @@ img{
     font-size: 0.22rem;
   }
   .mobile_font20 {
-    font-size: 0.20rem;
+    font-size: 0.2rem;
   }
   .mobile_font18 {
     font-size: 0.18rem;
