Latest version (online version)

--- a/src/style/self.scss
+++ b/src/style/self.scss
@@ -1,2 +1,2 @@
-$bg_url:'//cdn.hashland.com/sacredlab_assets_test/images/';
-$font_url:'//cdn.hashland.com/sacredlab_assets_test/fonts/';
+$bg_url:'//cdn.hashland.com/sealemlab_assets_test/images/';
+$font_url:'//cdn.sealemlab.com/sealemlab_assets_main/fonts/';
