--- a/src/style/self.scss
+++ b/src/style/self.scss
@@ -3,4 +3,4 @@
 // $font_url:'//cdn.sealemlab.com/sealemlab_assets_main/fonts/';
 
 $bg_url:'//cdn.hashland.com/sealemlab_assets_test/images/';
-$font_url:'//cdn.sealemlab.com/sealemlab_assets_test/fonts/';
+$font_url:'//cdn.hashland.com/sealemlab_assets_test/fonts/';
