Remove initial capitalization

--- a/src/style/reset.scss
+++ b/src/style/reset.scss
@@ -95,7 +95,7 @@ body {
   color: #ffffff;
   font-size: 18px;
   letter-spacing: 0.2px;
-  text-transform:capitalize
+  // text-transform:capitalize
 }
 @media screen and (max-width: 980px) {
   html,body {
