--- a/src/style/global.scss
+++ b/src/style/global.scss
@@ -201,6 +201,9 @@ img {
   .font45 {
     font-size: 45px;
   }
+  .font35 {
+    font-size: 35px;
+  }
   // banner 标题 eg:token
   .font34 {
     font-size: 34px;
