Mobile terminal latest version

--- a/src/style/global.scss
+++ b/src/style/global.scss
@@ -49,6 +49,9 @@
 .color_fff {
   color: #fff !important;
 }
+.color_ced{
+  color: #CED3D9 !important;
+}
 .color_000 {
   color: #000 !important;
 }
