--- a/src/style/self.scss
+++ b/src/style/self.scss
@@ -2,5 +2,5 @@
 // $bg_url:'//cdn.sealemlab.com/sealemlab_assets_main/images/';
 // $font_url:'//cdn.sealemlab.com/sealemlab_assets_main/fonts/';
 
-$bg_url:'//cdn.hashland.com/sealemlab_assets_test/images/';
+$bg_url:'//cdn.sealemlab.com/sealemlab_assets_test/images/';
 $font_url:'//cdn.hashland.com/sealemlab_assets_test/fonts/';
