--- a/src/style/reset.scss
+++ b/src/style/reset.scss
@@ -27,7 +27,7 @@ html,body {
 // 重置滚动条样式
 ::-webkit-scrollbar {
   width: 5px;
-  height: 10px;
+  height: 5px;
 }
 ::-webkit-scrollbar-thumb {
   background: #825f35;
@@ -57,5 +57,5 @@ input:-webkit-autofill:active {
 }
 a{
   text-decoration: none;
-  color: #ffffff;
+  color: #CED3D9;
 }
