--- a/src/style/global.scss
+++ b/src/style/global.scss
@@ -174,6 +174,8 @@ img {
   align-items: center;
   backdrop-filter: blur(6px);
   .video_{
+    max-width: 400px;
+    width: auto;
     height: 90%;
     object-fit: cover;
   }
@@ -306,6 +308,8 @@ img {
   .video_proup{
     z-index: 100;
     .video_{
+      max-width: 3.5rem;
+      width: auto;
       height: 80%;
       object-fit: cover;
     }
