CDN resources are applied as online packages

--- a/src/style/self.scss
+++ b/src/style/self.scss
@@ -1,6 +1,6 @@
 //上线版本
 $bg_url:'//cdn.sealemlab.com/sealemlab_assets_main/images/';
-// $font_url:'//cdn.sealemlab.com/sealemlab_assets_main/fonts/';
+$font_url:'//cdn.sealemlab.com/sealemlab_assets_main/fonts/';
 
 // $bg_url:'//cdn.sealemlab.com/sealemlab_assets_test/images/';
-$font_url:'//cdn.hashland.com/sealemlab_assets_test/fonts/';
+// $font_url:'//cdn.hashland.com/sealemlab_assets_test/fonts/';
