--- a/src/style/global.scss
+++ b/src/style/global.scss
@@ -32,7 +32,7 @@
   background: #9d9c9c !important;
 }
 .disable_bnb {
-  color: #CED3D9 !important;
+  color: #fff !important;
   background: #ccc !important;
   cursor: not-allowed !important;
   border-radius: 25px;
