--- a/src/style/global.scss
+++ b/src/style/global.scss
@@ -343,6 +343,9 @@ img {
   .mobile_font26 {
     font-size: 0.26rem;
   }
+  .mobile_font24 {
+    font-size: 0.24rem;
+  }
   .mobile_font22 {
     font-size: 0.22rem;
   }
