sdk update, market update

--- a/src/style/global.scss
+++ b/src/style/global.scss
@@ -66,6 +66,9 @@
 img {
   object-fit: contain;
 }
+.clear_hover:hover {
+  display: none !important;
+}
 .disply_none {
   display: none !important;
 }
