--- a/src/style/global.scss
+++ b/src/style/global.scss
@@ -35,7 +35,7 @@
   color: #fff !important;
   background: #ccc !important;
   cursor: not-allowed !important;
-  border-radius: 25px;
+  // border-radius: 25px;
 }
 .btn_normal{
   color: #000000 !important;
