Recharge and withdrawal page modification

--- a/src/style/global.scss
+++ b/src/style/global.scss
@@ -38,7 +38,7 @@
   // border-radius: 25px;
 }
 .btn_normal{
-  color: #000000 !important;
+  color: #0E0D0D !important;
   background: linear-gradient(180deg, #F7E9B9 0%, #F0CE75 100%) !important;
 }
 .btn_black{
