Docking the market

--- a/src/style/global.scss
+++ b/src/style/global.scss
@@ -170,7 +170,7 @@ img {
   min-height: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  // justify-content: center;
   align-items: center;
 }
 .video_proup{
