--- a/src/style/self_prod.scss
+++ b/src/style/self_prod.scss
@@ -1,3 +1,3 @@
 //上线版本
-$bg_url:'//cdn.sealemlab.com/sealemlab_assets_main/images/';
-$font_url:'//cdn.sealemlab.com/sealemlab_assets_main/fonts/';
+$bg_url:'//cdn.crystallabs.games/sealemlab/sealemlab_assets_main/images/';
+$font_url:'//cdn.crystallabs.games/sealemlab/sealemlab_assets_main/fonts/';
