--- a/src/style/self_dev.scss
+++ b/src/style/self_dev.scss
@@ -1,3 +1,3 @@
 //测试版本
-$bg_url:'//cdn.sealemlab.com/sealemlab_assets_test/images/';
+$bg_url:'//cdn.crystallabs.games/sealemlab/sealemlab_assets_test/images/';
 $font_url:'//cdn.hashland.com/sealemlab_assets_test/fonts/';
